# rofi-bookmarks

./: .SRCINFO  .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  install.sh  rebuild.sh  rofi-bookmarks  rofi-bookmarks-helper  rofi-bookmarks-launcher
.github/workflows/: build.yml
src/: rofi-bookmarks-clean.c  rofi-bookmarks.c  rofi-bookmarks.c.backup
